--- a/index.html
+++ b/index.html
@@ -5,4 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1c4m3by - Portfolio</title>
     <h1> UNDER CONSTRUCTION </h1>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DKTRGXJVTS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DKTRGXJVTS');
+</script>
+</head>
 </html>
